# karafriends

./: .babelrc  .gitignore  .nvmrc  .parcelrc  .pnp.cjs  .prettierignore  .yarnrc.yml  Cargo.toml  README.md  build.rs  electron.js  package-lock.json  package.json  packager.js  remocon.wdio.conf.js  remocon.wdio.conf.ts  renderer.wdio.conf.js  renderer.wdio.conf.ts  tsconfig.json  tslint.json  tunnel.yaml  wdio-chrome.conf.js  wdio-electron.conf.js  wdio.conf.js  webpack.config.js
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build-on-pr.yaml  build.yaml  codeql.yml  release.yaml
.husky/: post-checkout  post-commit  post-merge  pre-commit  pre-push
appIcons/: icon.icns
decryptor/: decryptor.py
native/: Cargo.toml  build.rs
native/asio_shim/: BUILD  WORKSPACE  asio_sdk.BUILD  static_library.bzl
native/asio_shim/src/: asio_shim.cpp  asio_shim.h  main.cpp
native/ephemeral-port-reserve/: Cargo.toml
native/ephemeral-port-reserve/src/: main.rs
native/karafriends/: Cargo.toml
native/karafriends-lib/: Cargo.toml
native/karafriends-lib/src/: lib.rs  pitch_detector.rs
native/karafriends/src/: lib.rs
native/launcher/: Cargo.toml
native/launcher/src/: main.rs
native/src/: _main.rs  audio_processor.rs  cpal.rs  lib.rs  list_input_devices.rs  pitch_detector.rs  traits.rs
prebuilt/windows/: libasio_shim.lib  libaubio-5.lib  libaubio.lib  libfftw3.lib  libfftw3f-3.lib  libfftw3f.lib  libsamplerate.lib  libwinpthread-1.lib
public/: electron.js  index.html  node.js
scripts/: getExternalResources.mjs
src/: App.tsx  QRCode.tsx  cubic-spline.d.ts  kuroshiro-analyzer-kuromoji.d.ts  kuroshiro.d.ts  multicast-dns.d.ts  polyline-normal.d.ts  react-mobile-picker-scroll.d.ts  wanakana.d.ts
src/audio/: cpal.rs  main.rs  unix.rs  windows.rs
src/common/: AudioSystem.ts  auth.ts  config.ts  constants.ts  dictionary.json  graphqlEnvironment.ts  hash.ts  ipAddresses.ts  joysoundParser.ts  parcel.d.ts  schema.graphql  videoDownloader.ts
src/common/components/: Loader.tsx
src/common/hooks/: usePitchShiftSemis.ts  usePlaybackState.ts  useQueue.ts
src/common/hooks/__generated__/: useQueueQueueQuery.graphql.ts  useQueueQueueSubscription.graphql.ts
src/common/types/: QueueItem.ts
src/main/: damApi.ts  graphql.ts  index.ts  joysoundApi.ts  mdns.ts  remoconMiddleware.ts  youtubeApi.ts
src/main/middleware/: remoconReverseProxy.ts  remoconServiceWorkerAllowed.ts
src/preload/: index.ts
src/remocon/: AddYoutube.tsx  AdhocLyricsGuide.css  AdhocLyricsGuide.tsx  App.module.scss  App.tsx  Artist.tsx  ArtistSearch.tsx  Controls.tsx  CurrentSong.tsx  History.tsx  NicoInfo.css  PreviewYoutube.css  PreviewYoutube.tsx  Search.tsx  Song.tsx  SongSearch.tsx  SongSearchResults.tsx  YoutubeInfo.css  YoutubeInfo.tsx  index.html  index.module.scss  index.tsx
src/remocon/__generated__/: AppQuery.graphql.ts  ArtistPaginationQuery.graphql.ts  ArtistQuery.graphql.ts  ArtistSearchQuery.graphql.ts  ArtistSearchResultsPaginationQuery.graphql.ts  ArtistSearchResultsViewQuery.graphql.ts  ArtistSearchResults_artistsByName.graphql.ts  ArtistViewQuery.graphql.ts  Artist_artistById.graphql.ts  ControlsQuery.graphql.ts  ControlsQueueQuery.graphql.ts  ControlsRemoveSongMutation.graphql.ts  ControlsSongsQuery.graphql.ts  HistoryPaginationQuery.graphql.ts  HistoryViewQuery.graphql.ts  History_history.graphql.ts  PreviewYoutubeVideoInfoQuery.graphql.ts  SongMutation.graphql.ts  SongQuery.graphql.ts  SongSearchQuery.graphql.ts  SongSearchResultsPaginationQuery.graphql.ts  SongSearchResultsViewQuery.graphql.ts  SongSearchResults_songsByName.graphql.ts
src/remocon/components/: DamQueueButton.tsx  DebouncedInput.tsx  Loader.tsx  NicoQueueButton.tsx  QueueButton.tsx  YoutubeQueueButton.tsx
src/remocon/components/AdhocLyricsControls/: AdhocLyricsControls.module.scss  AdhocLyricsControls.tsx  LyricsController.tsx  LyricsPicker.tsx  index.tsx
src/remocon/components/Artist/: Artist.module.scss  Artist.tsx  ArtistSongItem.tsx
src/remocon/components/ArtistSearchResults/: ArtistSearchResults.module.scss  ArtistSearchResults.tsx  ArtistSearchResultsItem.tsx  index.tsx
src/remocon/components/Button/: Button.module.scss  Button.tsx
src/remocon/components/ControlBar/: ControlBar.module.scss  ControlBar.tsx  NowPlaying.tsx
src/remocon/components/DamQueueButtons/: DamQueueButton.tsx  DamQueueButtons.module.scss  DamQueueButtons.tsx  index.tsx
src/remocon/components/EmoteButtons/: EmoteButtons.module.scss  EmoteButtons.tsx  (+1 more)
src/remocon/hooks/: useConfig.ts  useNickname.ts  useNowPlaying.ts  useQueueNotifications.ts  useUserIdentity.ts
src/remocon/pages/: AdhocLyricsPage.tsx  ArtistPage.tsx  ArtistSearchPage.tsx  HistoryPage.tsx  HomePage.tsx  JoysoundArtistPage.tsx  JoysoundArtistSearchPage.tsx  JoysoundSongPage.tsx  JoysoundSongSearchPage.tsx  NiconicoPage.tsx  SongPage.tsx  SongSearchPage.tsx  YouTubePage.tsx
src/remoconOld/: AddNico.tsx  ArtistSearchResults.tsx  Controls.tsx  CurrentSong.css  CurrentSong.tsx  NicoInfo.tsx  Search.tsx  SongSearch.tsx  YoutubeInfo.tsx  index.html
src/remoconOld/components/: PlaybackControls.tsx
src/renderer/: AdhocLyrics.css  AdhocLyrics.tsx  App.css  App.tsx  Effects.css  Effects.tsx  HostnameSetting.tsx  JoysoundRenderer.css  JoysoundRenderer.tsx  Login.tsx  MicrophoneSetting.tsx  PianoRoll.css  PianoRoll.tsx  Player.css  Player.tsx  QRCode.css  QRCode.tsx  Queue.css  Queue.tsx  audioSystem.ts  global.ts  index.css  index.html  index.tsx  joysoundParser.ts  pitchShifter.ts  webAudio.ts  window.d.ts
src/renderer/__generated__/: AppQueueAddedSubscription.graphql.ts  PlayerPopSongMutation.graphql.ts  PlayerScoringDataQuery.graphql.ts  PlayerSongDataQuery.graphql.ts  PlayerStreamingUrlQuery.graphql.ts  QRCodeQuery.graphql.ts
src/renderer/audio/: phazeAudioWorklet.ts
src/renderer/shaders/: PianoRoll.vert.glsl  PianoRollNote.frag.glsl  PianoRollNote.vert.glsl  PianoRollSeek.vert.glsl  PianoRollSingleColor.frag.glsl
tests/wdio/: test.js
tests/wdio/chrome/: test.js
tests/wdio/remocon/: test.js
tests/wdio/renderer/: test.js
(+77 files in other folders)
