[package]
name = "karafriends"
version = "0.1.0"
authors = ["Connor Worley <connorbworley@gmail.com>"]
edition = "2018"
links = "aubio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "karafriends"
path = "src/audio/main.rs"

[dependencies]
aubio-rs = "0.1.3"
futures = "0.3.14"

[target.'cfg(not(windows))'.dependencies]
cpal = "0.13.3"

[target.'cfg(windows)'.dependencies]
windows = "0.8.0"

[target.'cfg(windows)'.build-dependencies]
windows = "0.8.0"
fs_extra = "1.2.0"