[package]
name = "karafriends"
version = "0.1.0"
authors = ["Connor Worley <connorbworley@gmail.com>"]
edition = "2018"

[[bin]]
name = "karafriends"
path = "src/audio/main.rs"

[features]
winrt = ["windows"]

[dependencies]
aubio-rs = "0.1.3"
futures = "0.3.14"
cpal = "0.13.3"
windows = { version = "0.8.0", optional = true }

[build-dependencies]
windows = { version = "0.8.0", optional = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
