[package]
name = "karafriends"
version = "0.1.0"
authors = ["Connor Worley <connorbworley@gmail.com>"]
edition = "2018"
exclude = ["index.node"]

[lib]
name = "karafriends"
crate-type = ["cdylib"]

[dependencies]
asio-sys = { git = "https://github.com/connorworley/cpal", branch = "connorworley-patch-1", optional = true }
cpal = "0.15.2"
lazy_static = "1.4.0"
neon = { version = "0.10.1", default-features = false, features = ["napi-4"] }
realfft = "3.0.1"
ringbuf = "0.2.8"
rubato = "0.12.0"

[target.'cfg(windows)'.dependencies]
win32console = "0.1.5"

[build-dependencies]
neon-build = "0.10.1"

[features]
asio = ["asio-sys", "cpal/asio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
